--- a/index.html
+++ b/index.html
@@ -2,72 +2,66 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Phone Hunter</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Phone Hunter</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body>
-    <header>
-        <h1>Welcome to my Phone Hunter!</h1>
-    </header>
-    <main class="container">
-        <section>
-            <div class="mb-3 w-50">
-                <input id="search-field" type="email" class="form-control" id="exampleFormControlInput1"
-                    placeholder="search your phone">
-                <div id="btn-search" class="btn btn-primary">Search</div>
-            </div>
-        </section>
-        <!-- display Search Result -->
-        <section>
-            <div id="phones-container" class="row row-cols-1 row-cols-md-3 g-4">
 
-            </div>
-            <div id="no-found-message" class="mt-4 d-none">
-                <h3 class="text-warning">No Phone Found. Please try a new search</h3>
-            </div>
-            <div id="show-all" class="text-center d-none">
-                <div id="btn-show-all" class="btn btn-primary">Show All</div>
-            </div>
-        </section>
-        <!-- loader -->
-        <section id="loader" class="d-none">
-            <div style="height: 400px;" class="d-flex justify-content-center align-items-center">
-                <div class="spinner-border  text-success" role="status">
-                    <span class="visually-hidden">Loading...</span>
-                </div>
-            </div>
-        </section>
-        <!-- modal contents -->
-        <section>
-            
-            <!-- Modal -->
-            <div class="modal fade" id="phoneDetailModal" tabindex="-1" aria-labelledby="phoneDetailModalLabel"
-                aria-hidden="true">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title" id="phoneDetailModalLabel"></h5>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                        </div>
-                        <div id="phone-details" class="modal-body">
-                            
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </main>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-        crossorigin="anonymous"></script>
-    <script src="js/phone.js"></script>
+  <!-- // header section started -->
+  <header>
+
+    <h1 class="text-center">Welcome to Phone Hunter</h1>
+    <!-- search section started -->
+   <div class="input-group justify-content-center mb-3">
+    <!-- search input field -->
+     <input id="search-field" type="text" class="w-25 border-0 rounded-start-2   bg-secondary-subtle p-2"placeholder="Search Your Phone">
+      <!-- search input btn -->
+     <button id="btn-search" class="btn btn-primary mx-2 rounded" type="button">Search</button>
+   </div>
+    <!-- search section end -->
+  </header>
+
+  <!-- // header section end -->
+
+
+  <main class="container">
+    <!-- Spinner  -->
+    <div id="spinner" style="height: 200px;" class="d-flex justify-content-center align-items-center d-none">
+      <div class="spinner-border text-primary" role="status">
+        <span class="visually-hidden">Loading...</span>
+      </div>
+    </div>
+
+    <section>
+      <!-- Display All Phones section -->
+      <div id="phones-container" class="row row-cols-1 row-cols-md-3 row-cols-lg-4 g-4">
+
+      </div>
+
+      <!-- Show all Button  -->
+      <div id="show-all" class="text-center d-none">
+        <button id="btn-show-all" class="btn btn-outline-success">Show All
+      </div>
+      </div>
+
+      <!-- not found section  -->
+      <div id="not-found-cont" class="d-none mt-5">
+        <img
+          src="https://img.freepik.com/premium-vector/no-data-found-empty-file-folder-concept-design-vector-illustration_620585-1698.jpg"
+          class="img-fluid mx-auto d-block" alt="No Data Found">
+        <p class="text-center">source: FreePik</p>
+      </div>
+    </section>
+  </main>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+  <script src="js/phone.js"></script>
 </body>
 
 </html>
