--- a/index.html
+++ b/index.html
@@ -1,67 +1,101 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Phone Hunter</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 
-<body>
-
-  <!-- // header section started -->
+<body class="container">
   <header>
 
-    <h1 class="text-center">Welcome to Phone Hunter</h1>
-    <!-- search section started -->
-   <div class="input-group justify-content-center mb-3">
-    <!-- search input field -->
-     <input id="search-field" type="text" class="w-25 border-0 rounded-start-2   bg-secondary-subtle p-2"placeholder="Search Your Phone">
-      <!-- search input btn -->
-     <button id="btn-search" class="btn btn-primary mx-2 rounded" type="button">Search</button>
-   </div>
-    <!-- search section end -->
-  </header>
-
-  <!-- // header section end -->
-
-
-  <main class="container">
-    <!-- Spinner  -->
-    <div id="spinner" style="height: 200px;" class="d-flex justify-content-center align-items-center d-none">
-      <div class="spinner-border text-primary" role="status">
-        <span class="visually-hidden">Loading...</span>
-      </div>
-    </div>
-
     <section>
-      <!-- Display All Phones section -->
-      <div id="phones-container" class="row row-cols-1 row-cols-md-3 row-cols-lg-4 g-4">
+      <nav class="navbar bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand">PhoneBazz</a>
+          <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+          </form>
+        </div>
+      </nav>
+    </section>
+    
+    <section>
+      <div class="card border border-0">
+        <img src="photos/23304.jpg" class="card-img opacity-50 img-fluid rounded mx-auto d-block w-75" alt="...">
+      <section>
+        <div class="card-img-overlay text-center text-warning mt-5">
+          <h1 id="card-title header-text" class=" mt-4 mb-4 fw-bolder text-center">Welcome to PhoneBazz</h1>
+          <section class="card-text">
+            <div class=" row justify-content-center">
+              <input id="search-field" type="text" class="form-control w-50" id="exampleFormControlInput1"
+                placeholder="Search your phone">
+            </div>
+            <div class="text-center">
+              <div id="btn-search" class="btn btn-primary mt-3 mb-3">Search</div>
+            </div>
+          </section>
+        </div>
+      </section>
+      </div>
+    </section>
+
+
+  </header>
+  <main class="mt-4 ">
+    <!-- display search result -->
+    <section>
+      <div id="phone-container" class="row row-cols-1 row-cols-md-3 g-4">
 
       </div>
-
-      <!-- Show all Button  -->
-      <div id="show-all" class="text-center d-none">
-        <button id="btn-show-all" class="btn btn-outline-success">Show All
+      <div id="no-found-message" class="mt-4 d-none">
+        <h3 class="text-warning">No phone found. Please try a new search</h3>
       </div>
+      <div id="show-all" class="text-center mt-4 mb-4 d-none">
+        <div id="btn-show-all" class="btn btn-primary">Show More</div>
       </div>
+    </section>
+    <!-- Loader -->
+    <section id="loader" class="d-none">
+      <div style="height: 400px;" class="d-flex justify-content-center align-items-center">
+        <div class="spinner-border text-danger" role="status">
+          <span class="visually-hidden">Loading...</span>
+        </div>
+      </div>
+    </section>
+    <!-- modal contents -->
+    <section>
 
-      <!-- not found section  -->
-      <div id="not-found-cont" class="d-none mt-5">
-        <img
-          src="https://img.freepik.com/premium-vector/no-data-found-empty-file-folder-concept-design-vector-illustration_620585-1698.jpg"
-          class="img-fluid mx-auto d-block" alt="No Data Found">
-        <p class="text-center">source: FreePik</p>
+      <!-- Modal -->
+      <div class="modal fade" id="phoneDetailModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div id="phone-details" class="modal-body">
+              ...
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
   </main>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
+  <!-- scripts -->
   <script src="js/phone.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
+    integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
