change some style

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 
-<body class="container">
+<body >
   <header>
     <!-- navbar start -->
     <section>
-      <nav class="navbar bg-body-tertiary">
+      <nav class="navbar bg-body-tertiary p-4">
         <div class="container-fluid">
-          <a class="navbar-brand">PhoneBazz</a>
+          <a class="navbar-brand text-2xl fw-bold ">PhoneBazz</a>
           <!-- search field and btn -->
           <div class="d-flex">
             <input id="search-field" type="text" class="form-control mx-2" placeholder="Search your phone">
@@ -30,22 +30,15 @@
     <!-- navbar end  -->
         
     <!-- banner section start -->
-    <section>
-      <div class="card border border-0 mt-2">
+    <section class="container">
         <img
-          src="https://m-cdn.phonearena.com/images/article/64576-wide-two_1200/The-Best-Phones-to-buy-in-2024---our-top-10-list.jpg"
-          class="card-img opacity-50 img-fluid rounded mx-auto d-block w-75" alt="...">
-        <section>
-          <div class="card-img-overlay text-center text-white mt-2">
-            <h1 id="card-title header-text" class=" mt-4 mb-4 fw-bolder text-center">Welcome to PhoneBazz</h1>
-          </div>
-        </section>
-      </div>
+          src="images/banner.jpg"
+          class="card-img opacity-50 img-fluid rounded mx-auto d-block w-100" alt="...">
     </section>
     <!-- banner section end  -->
 
   </header>
-  <main class="mt-4 ">
+  <main class="mt-4 container">
     <!-- display search result -->
     <h2 class="text-center fw-bold">Your Favourite Phones</h2>
     <section>
@@ -98,7 +91,7 @@
     </section>
   </main>
   <!-- footer section start -->
-  <footer id="footer-container" class=" bg-dark opacity-50 m-0 text-white mt-4 p-2 text-center pt-4">
+  <footer id="footer-container" class=" bg-body-tertiary m-0 mt-4 p-2 text-center pt-4">
 
   </footer>
   <!-- footer section end  -->
