change some style

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <section>
       <nav class="navbar bg-body-tertiary p-4">
         <div class="container-fluid">
-          <a class="navbar-brand text-2xl fw-bold ">PhoneBazz</a>
+          <a class="navbar-brand fw-bold ">PhoneBazz</a>
           <!-- search field and btn -->
           <div class="d-flex">
             <input id="search-field" type="text" class="form-control mx-2" placeholder="Search your phone">
